--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"dependencies": {
 		"express": "^4.14.0",
 		"body-parser": "^1.15.2",
+    "mongodb": "~3.6.0",
+    "mongoose": "~5.4.0",
 		"cookie-parser": "^1.4.3",
 		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
 	},
